Update to JDK17 (#268)